src/app/pages/admin/admin.component.css
.container {
    width: 100%;
    height: 750px;
    background-color : #fff;
    border-bottom: 1px solid rgba(0, 0, 0, .24);
}
  
.sidenav-content {
    margin-left: 20px;
}

.sidenav {
    width: 200px;
    box-shadow: 3px 0 6px rgba(0, 0, 0, .24);
}

.sidenav button{
    width: 200px;
    text-align: left;
}

.sidenav-toggle{
    display: none;
}

@media screen and (max-width: 720px) {
    .sidenav-toggle{
        position: absolute;
        display: flex;
        height: 100%;
        align-items: center;
        justify-content: center;
    }
    
    .sidenav-toggle mat-icon{
        font-size : 2.5rem;
        margin-right : 30%;
    }
}

